--- a/src/app/viewstudent/viewstudent.component.html
+++ b/src/app/viewstudent/viewstudent.component.html
@@ -5,7 +5,7 @@
             <div *ngFor="let i of data"class="col col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
 
                 <div class="card" >
-                    <img src="{{i.photo}}" class="card-img-top" alt="...">
+                    <img height="250px"src="{{i.photo}}" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">{{i.name}}</h5>
                       <p class="card-text">{{i.age}}</p>
